feat(macos): added macos identifier for building binaries

--- a/package.json
+++ b/package.json
@@ -69,7 +69,11 @@
       "@oclif/plugin-commands",
       "@oclif/plugin-help",
       "@oclif/plugin-not-found"
-    ]
+    ],
+    "commands": "./dist/commands",
+    "macos": {
+      "identifier": "com.4lch4.git-finder"
+    }
   },
   "repository": "4lch4/git-finder",
   "types": "dist/index.d.ts"
