chore: updated oclif.commands in package.json

--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "postpublish": "yarn pack:all",
     "version": "oclif-dev readme && git add README.md",
-    "pack:all": "npm run pack:win && npm run pack:mac && npm run pack:linux",
-    "pack:win": "rm -rf ./out/win; oclif-dev pack:win && rsync ./dist/win/*.exe ./out/win",
+    "pack:all": "npm run pack:win && npm run pack:mac",
+    "pack:win": "rm -rf ./out/win; oclif-dev pack:win && rsync -r ./dist/win/*.exe out/win",
     "pack:mac": "rm -rf ./out/macos; oclif-dev pack:macos && rsync -r ./dist/macos ./out",
-    "pack:linux": "rm -rf ./out/linux; oclif-dev pack:linux && rsync -r ./dist/linux ./out",
     "pub:tar": "ts-node ./.ci/release.ts"
   },
   "bugs": "https://github.com/4lch4/git-finder/issues",
@@ -70,7 +69,7 @@
       "@oclif/plugin-help",
       "@oclif/plugin-not-found"
     ],
-    "commands": "./dist/commands",
+    "commands": "dist/commands",
     "macos": {
       "identifier": "com.4lch4.git-finder"
     }
