build(ci): added build steps for deb, mac, & win

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,81 @@ jobs:
 
       # - name: Build Initial Artifact
       #   run: yarn pack
+
+  build-deb:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+          node-version: 14.x
+
+      # Runs a single command using the runners shell
+      - name: Install Yarn
+        run: npm install -g yarn typescript
+
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Transpile Code
+        run: tsc
+
+      - name: Build Binary
+        run: yarn pack:deb
+
+  build-win:
+    runs-on: windows-latest
+    needs: setup
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+          node-version: 14.x
+
+      # Runs a single command using the runners shell
+      - name: Install Yarn
+        run: npm install -g yarn typescript
+
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Transpile Code
+        run: tsc
+
+      - name: Build Binary
+        run: yarn pack:win
+
+  build-mac:
+    runs-on: macos-latest
+    needs: setup
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        with:
+          # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+          node-version: 14.x
+
+      # Runs a single command using the runners shell
+      - name: Install Yarn
+        run: npm install -g yarn typescript
+
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Transpile Code
+        run: tsc
+
+      - name: Build Binary
+        run: yarn pack:mac
