--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "postpublish": "yarn pack:all",
     "version": "oclif-dev readme && git add README.md",
-    "pack:all": "npm run pack:win && npm run pack:mac",
-    "pack:win": "rm -rf ./out/win; oclif-dev pack:win && rsync -r ./dist/win/*.exe out/win",
-    "pack:mac": "rm -rf ./out/macos; oclif-dev pack:macos && rsync -r ./dist/macos ./out",
-    "pack:deb": "oclif-dev pack:deb && rsync -r ./dist/linux",
+    "pack:win": "oclif-dev pack:win && Copy-Item ./dist/win/*.exe ./out/win",
+    "pack:mac": "oclif-dev pack:macos && rsync -r ./dist/macos ./out",
+    "pack:deb": "sudo oclif-dev pack:deb && rsync -r ./dist/linux ./out",
     "pub:tar": "ts-node ./.ci/release.ts"
   },
   "bugs": "https://github.com/4lch4/git-finder/issues",
