--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   setup:
+    name: Initial Setup
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -48,6 +49,7 @@ jobs:
       #   run: yarn pack
 
   build-deb:
+    name: Build Debian Binary
     runs-on: ubuntu-latest
     needs: setup
     steps:
@@ -74,6 +76,7 @@ jobs:
         run: yarn pack:deb
 
   build-win:
+    name: Build Windows Binary
     runs-on: windows-latest
     needs: setup
     steps:
@@ -100,6 +103,7 @@ jobs:
         run: yarn pack:win
 
   build-mac:
+    name: Build macOS Binary
     runs-on: macos-latest
     needs: setup
     steps:
