fix(ci): another fix attempt for pack:deb script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "version": "oclif-dev readme && git add README.md",
     "pack:win": "oclif-dev pack:win && Copy-Item ./dist/win/*.exe ./out/win",
     "pack:mac": "oclif-dev pack:macos && rsync -r ./dist/macos ./out",
-    "pack:deb": "sudo oclif-dev pack:deb && rsync -r ./dist/linux ./out",
+    "pack:deb": "oclif-dev pack:deb && rsync -r ./dist/linux ./out",
     "pub:tar": "ts-node ./.ci/release.ts"
   },
   "bugs": "https://github.com/4lch4/git-finder/issues",
