--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "files": [
     "/bin",
     "/dist"
